# SDL2-diligent

./: CMakeLists.txt  README.md  main.cpp
